***********
version 3.2
***********

* added more Qore error and exception handling in ocilib object/NTY APIs
* ensure all strings written to the DB are converted to the target character
  encoding before writing
* copy all values when binding by value in case they are bound to an IN OUT
  variable, in which case memory corruption would occur previous to this
  change
* support for IN OUT variables by giving a hash argument with the "value" key
  as the input value for the output variable
* ignore placeholders and quotes in SQL comments
* user modules moved to top-level qore module directory from version-specific
  module directory since they are valid for multiple versions of qore
* fixed a major bug where a lost connection during an SQL operation using
  named types could cause a crash due to the database-specific private context
  becoming invalid and then used after deletion
* fixed a major bug where a crash generated internally in the OCI library
  would occur when NTYs were bound in a prepared statement and the statement
  was executed in a new logon session after transparent reconnection
* fixed bugs binding values to number attributes of NTYs and collections
* allow NTY keys to be given in lower case


***********
version 3.1
***********

* fixed retrieving NUMBER types from objects/NTYs
* added more Qore exception handling in ocilib object/NTY APIs
* enforce DBI options on NTY retrieval with numeric values


***********
version 3.0
***********

* supports selecting data from LONG columns
* driver supports Oracle Advanced Queueing
* driver now claims the DBI_CAP_AUTORECONNECT capability if Qore support the
 option (with Qore 0.8.7+ - functionality was already in place)


*************
version 2.2.1
*************

* fixed a bug where non-integer values were returned as integers
* fixed a bug in returning negative integer values that were being returned as
  arbitrary-precision numeric values instead of integers